Add content and style to h1,h3

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title></title>
+    <title>Portfolio</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/styles.css">
@@ -20,6 +20,10 @@
         <![endif]-->
 
     <script src="" async defer></script>
+    <div class="intro">
+        <h1>Victoria Nawire</h1>
+        <h3>Software Developer</h3>
+    </div>
 </body>
 
 </html>
