Add images to folder

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajaz/libs/fontawesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -21,8 +22,19 @@
 
     <script src="" async defer></script>
     <div class="intro">
-        <h1>Victoria Nawire</h1>
-        <h3>Software Developer</h3>
+        <h1>Hello !</h1>
+        <h1>I am Victoria Nawire</h1>
+        <h3>I am an entry level Software Developer</h3>
+
+    </div>
+    <div class="about">
+        <h1>About Me</h1>
+        <img src="/images/me2.jpg" alt=" image of me">
+        <p>I am a new developer who is learning at moringa school. I decided to start learning at Moringa School because I needed the skills to go into the job market.</p>
+        <h3>skills</h3>
+    </div>
+    <div class="projects">
+        <h1>Projects</h1>
     </div>
 </body>
 
