--- a/index.html
+++ b/index.html
@@ -29,13 +29,51 @@
     </div>
     <div class="about">
         <h1>About Me</h1>
-        <img src="/images/me2.jpg" alt=" image of me">
+        <img src="/images/vic1.jpg" alt=" image of me">
         <p>I am a new developer who is learning at moringa school. I decided to start learning at Moringa School because I needed the skills to go into the job market.</p>
         <h3>skills</h3>
     </div>
     <div class="projects">
-        <h1>Projects</h1>
+        <h1> Recent Projects</h1>
+
+        <div class="row">
+            <div class="column">
+                <div class="card">
+                    <img src="/images/resort.jpg" alt="resort" width="25%">
+                    <div class="container">
+                        <h4><b>Resort Project</b></h4>
+                        <p><button>Check it out</button></p>
+                    </div>
+                </div>
+            </div>
+            <div class="column">
+                <div class="card">
+                    <img src="/images/resort.jpg" alt="resort" width="25%">
+                    <div class="container">
+                        <h4><b><a href="https://github.com/victorianawire/band-test" class="btn btn-primary">First Website</a></b></h4>
+
+                    </div>
+                </div>
+            </div>
+            <div class="column">
+                <div class="card">
+
+                    <img src="/images/resort.jpg" alt="resort" width="25%">
+                    <div class="container">
+                        <h4><b> <a href="https://github.com/victorianawire/band-test" class="btn btn-primary">Band Sample</a></b></h4>
+
+                    </div>
+                </div>
+            </div>
+
+        </div>
     </div>
+
+
+
+    </div>
+    </div>
+
 </body>
 
 </html>
