change the introduction

--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
 
     <script src="" async defer></script>
     <div class="intro">
-        <h1>Hello !</h1>
-        <h1>I am Victoria Nawire</h1>
+        <h1> Victoria Nawire</h1>
         <h3>I am an entry level Software Developer</h3>
 
     </div>
@@ -41,16 +40,16 @@
                 <div class="card">
                     <img src="/images/resort.jpg" alt="resort" width="25%">
                     <div class="container">
-                        <h4><b>Resort Project</b></h4>
-                        <p><button>Check it out</button></p>
+                        <h4><b></b></h4>
+                        <p><b><a href="https://github.com/victorianawire/private-island" class="btn btn-primary">Resort Sample Project</a></b></p>
                     </div>
                 </div>
             </div>
             <div class="column">
                 <div class="card">
-                    <img src="/images/resort.jpg" alt="resort" width="25%">
+                    <img src="/images/no1.jpg" alt="resort" width="25%">
                     <div class="container">
-                        <h4><b><a href="https://github.com/victorianawire/band-test" class="btn btn-primary">First Website</a></b></h4>
+                        <h4><b><a href="https://github.com/victorianawire/My-first-website" class="btn btn-primary">First Website Sample</a></b></h4>
 
                     </div>
                 </div>
