Correct the file path

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </div>
             <div class="column">
                 <div class="card">
-                    <img src="/images/no1.jpg" alt="resort" width="25%">
+                    <img src="./images/no1.jpg" alt="resort" width="25%">
                     <div class="container">
                         <h4><b><a href="https://github.com/victorianawire/My-first-website" class="btn btn-primary">First Website Sample</a></b></h4>
 
@@ -57,7 +57,7 @@
             <div class="column">
                 <div class="card">
 
-                    <img src="/images/resort.jpg" alt="resort" width="25%">
+                    <img src="./images/resort.jpg" alt="resort" width="25%">
                     <div class="container">
                         <h4><b> <a href="https://github.com/victorianawire/band-test" class="btn btn-primary">Band Sample</a></b></h4>
 
