--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
     <title>Portfolio</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajaz/libs/fontawesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="">
 </head>
 
 <body>
@@ -21,58 +20,6 @@
         <![endif]-->
 
     <script src="" async defer></script>
-    <div class="intro">
-        <h1> Victoria Nawire</h1>
-        <h3>I am an entry level Software Developer</h3>
-
-    </div>
-    <div class="about">
-        <h1>About Me</h1>
-        <img src="/images/vic1.jpg" alt=" image of me">
-        <p>I am a new developer who is learning at moringa school. I decided to start learning at Moringa School because I needed the skills to go into the job market.</p>
-        <h3>skills</h3>
-    </div>
-    <div class="projects">
-        <h1> Recent Projects</h1>
-
-        <div class="row">
-            <div class="column">
-                <div class="card">
-                    <img src="/images/resort.jpg" alt="resort" width="25%">
-                    <div class="container">
-                        <h4><b></b></h4>
-                        <p><b><a href="https://github.com/victorianawire/private-island" class="btn btn-primary">Resort Sample Project</a></b></p>
-                    </div>
-                </div>
-            </div>
-            <div class="column">
-                <div class="card">
-                    <img src="./images/no1.jpg" alt="resort" width="25%">
-                    <div class="container">
-                        <h4><b><a href="https://github.com/victorianawire/My-first-website" class="btn btn-primary">First Website Sample</a></b></h4>
-
-                    </div>
-                </div>
-            </div>
-            <div class="column">
-                <div class="card">
-
-                    <img src="./images/resort.jpg" alt="resort" width="25%">
-                    <div class="container">
-                        <h4><b> <a href="https://github.com/victorianawire/band-test" class="btn btn-primary">Band Sample</a></b></h4>
-
-                    </div>
-                </div>
-            </div>
-
-        </div>
-    </div>
-
-
-
-    </div>
-    </div>
-
-</body>
+    <div class=< /body>
 
 </html>
