--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Portfolio</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -20,6 +20,24 @@
         <![endif]-->
 
     <script src="" async defer></script>
-    <div class=< /body>
+    <div class="top">
+        <b>
+            <h1>
+            HELLO, I AM VICTORIA NAWIRE
+            </h1>
+        </br>
+        <br>
+        <h3>
+            My Portfolio
+        </h3>
+        <p><i class="arrow down"></i></p>
+        <p><i class="arrow down"></i></p>
+        </p>
+    </div>
+    <div class="about">
+        <h1>ABOUT ME</h1>
+    </div>
+
+</body>
 
 </html>
