--- a/index.html
+++ b/index.html
@@ -36,6 +36,13 @@
     </div>
     <div class="about">
         <h1>ABOUT ME</h1>
+        <br>
+        <span>
+            
+        </span>
+
+        <span>I am a newbie who has developed interest in coding. My hobies are swimming,reading books and I love to watch investigation programmes. I decided to join moringa school to work on my coding skills
+            </span>
     </div>
 
 </body>
