add contact information

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <title>Portfolio</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="path/to/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+    <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
+    <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
@@ -35,6 +39,7 @@
         </p>
     </div>
     <div class="about">
+        
         <h1>ABOUT ME</h1>
         <br>
         <span>
@@ -43,6 +48,23 @@
 
         <span>I am a newbie who has developed interest in coding. My hobies are swimming,reading books and I love to watch investigation programmes. I decided to join moringa school to work on my coding skills
             </span>
+    </div>
+    <div class="edu">
+        <p>Education</p>
+    </div>
+    <div class= "projects">
+        <p>Here are some samples of my projects</p>
+    </div>
+    <div class="con">
+        <h1>Contact Me</h1>
+        <i class="fa-solid fa-phone-arrow-doen-left"></i>
+            </div>
+        <img src="./images/p1.png" alt="Call" height="50px"width="50px">
+        <p> Call me :+254799251664</p>
+        <img src="./images/slack.png " alt="slack" height="50px" width="50px">
+        <p>Username:Victoria Nawire</p>
+        <img src="./images/em.jpg" alt="email" height="50px" width="50px">
+        <p>Email:victorianawirev@gmail.com</p>
     </div>
 
 </body>
