Add information regarding the linked sites

--- a/index.html
+++ b/index.html
@@ -76,13 +76,25 @@
         <h3 style="color: #548146;"> Project Samples</h3>
         <div class="row">
             <div class="column">
-              <div class="card">My First Website</div>
+              <div class="card">
+                  <img src="./images/no1.jpg" alt="first website" height="50px"width="35%">
+                  <a href="https://github.com/victorianawire/My-first-website"> First Website</a>
+                  
+              </div>
+              </div>
+            <div class="column">
+              <div class="card">
+                  <img src="./images/resort.jpg" alt="resort" height="50px" width="35%"> 
+                  <a href="">Sample Resort Website</a>
+                  <p>This is a simple website for a luxury private island. The website is intended to provide basic information regarding the island and the available activities as well as contact information.</p>
+                </div>
             </div>
             <div class="column">
-              <div class="card">Resort Sample  Website</div>
+              <div class="card">
+                <img src="./images/vic6.jpg" alt="Band" height="50px" width="35%">       
+                <a href="https://github.com/victorianawire/band-test">Sample Band Website</a>
+            <p>This is a basic page for a band. The webpage contains the songs that the band has produced and their planned events.</p>
             </div>
-            <div class="column">
-              <div class="card">Band Sample Website</div>
             </div>
         
           </div>
@@ -90,7 +102,8 @@
     <div class="con">
         <h3 style="color: #548146;">Contact Me</h1>
         <i class="fa-solid fa-phone-arrow-doen-left"></i>
-            </div>
+   
+    </div>
         <img src="./images/p1.png" alt="Call" height="50px"width="50px">
         <p> Call me :+254799251664</p>
         <img src="./images/slack.png " alt="slack" height="50px" width="50px">
