Change the layout of the cards

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             
         </span>
 
-        <span>I am a newbie who has developed interest in coding. My hobies are swimming,reading books and I love to watch investigation programmes. I decided to join moringa school to work on my coding skills
+        <span>I am a newbie who has developed interest in coding. My hobies are swimming,reading books and I love to watch investigation programmes. I decided to join moringa school to work on my coding skills to prepare for the job-market.
             </span>
     </div>
     <div class="edu">
@@ -91,8 +91,11 @@
             </div>
             <div class="column">
               <div class="card">
-                <img src="./images/vic6.jpg" alt="Band" height="50px" width="35%">       
-                <a href="https://github.com/victorianawire/band-test">Sample Band Website</a>
+                <img src="./images/vic6.jpg" alt="Band" height="50px" width="35%"> 
+                &nbsp;      
+                <a href="https://github.com/victorianawire/band-test">
+                    <p>Sample Band Website</p></a>
+                &nbsp;
             <p>This is a basic page for a band. The webpage contains the songs that the band has produced and their planned events.</p>
             </div>
             </div>
