Change the layout of the card

--- a/index.html
+++ b/index.html
@@ -77,26 +77,34 @@
         <div class="row">
             <div class="column">
               <div class="card">
-                  <img src="./images/no1.jpg" alt="first website" height="50px"width="35%">
-                  <a href="https://github.com/victorianawire/My-first-website"> First Website</a>
-                  
+                &nbsp;
+                  <a href="https://github.com/victorianawire/My-first-website"> 
+                    <p style="color:black">First Website Sample</p></a>
+                    &nbsp;
+                    &nbsp;
+                    &nbsp;
+                    <p>This was the first ever website that I created.It  is a single page that contains a basic html and some css.In addition to this, it contains some photographs.</p>
+              &nbsp;
+              &nbsp;
+
               </div>
               </div>
             <div class="column">
               <div class="card">
-                  <img src="./images/resort.jpg" alt="resort" height="50px" width="35%"> 
-                  <a href="">Sample Resort Website</a>
-                  <p>This is a simple website for a luxury private island. The website is intended to provide basic information regarding the island and the available activities as well as contact information.</p>
+                  &nbsp; 
+                  <a href="https://github.com/victorianawire/private-island">
+                    <p style="color: black"> Resort Website </p></a>
+                    &nbsp; 
+                    <p>This is a simple website for a luxury private island. The website is intended to provide basic information regarding the island and the available activities as well as contact information.</p>
                 </div>
             </div>
             <div class="column">
               <div class="card">
-                <img src="./images/vic6.jpg" alt="Band" height="50px" width="35%"> 
                 &nbsp;      
                 <a href="https://github.com/victorianawire/band-test">
-                    <p>Sample Band Website</p></a>
+                    <p style="color: black;">Sample Band Website</p></a>
                 &nbsp;
-            <p>This is a basic page for a band. The webpage contains the songs that the band has produced and their planned events.</p>
+            <p>This is a basic page for a band. The webpage contains the songs that the band has produced and their planned events and their respective venues.</p>
             </div>
             </div>
         
