--- a/work.html
+++ b/work.html
@@ -68,7 +68,7 @@
 
                 <div class="item">
                     <a href="#!">
-                        <img src="/images/bg1.jpg" alt="Project">
+                        <img src="images/bg1.jpg" alt="Project">
                     </a>
                     <a href="https://github.com/victorianawire/My-first-website" class="btn-light">
                         <i class="fas fa-eye"></i> Project
@@ -81,7 +81,7 @@
                 &nbsp; &nbsp;
                 <div class="item">
                     <a href="#!">
-                        <img src="/images/bg1.jpg" alt="Project">
+                        <img src="images/bg1.jpg" alt="Project">
                     </a>
                     <a href="https://victorianawire.github.io/akanname/" class="btn-light">
                         <i class="fas fa-eye"></i> Project
