--- a/aboutme.html
+++ b/aboutme.html
@@ -22,7 +22,7 @@
         <nav class="menu">
             <div class="menu-branding">
                 <div class="portrait">
-                    <img src="images/vic4.jpg" alt="vic">
+                    <img src="images/vic4.jpg" alt="vic" width="200px" height="200px">
                 </div>
             </div>
             </div>
