--- a/aboutme.html
+++ b/aboutme.html
@@ -55,9 +55,10 @@
         <h2 class="sm-heading">
         </h2>
         <div class="about-info">
+            <div class="v4">
             <img src="images/vic4.jpg">
-          
- <p>A web developer with excellent communication skills, works well under pressure and is ready to learn.</p>
+            </div>
+
             <div class="bio">
                 <h3 class="text-secondary">Miss_Nawire</h3>
                 <p>A web developer with excellent communication skills, works well under pressure and is ready to learn.</p>
