--- a/aboutme.html
+++ b/aboutme.html
@@ -54,10 +54,11 @@
         </h1>
         <h2 class="sm-heading">
         </h2>
+        <img src="images/vic4.jpg" alth="myimage" class= "v4">
         <div class="about-info">
-            <div class="v4">
-            <img src="images/vic4.jpg">
-            </div>
+          
+            <img src="images/vic4.jpg" alth="myimage" class= "v4">
+           
 
             <div class="bio">
                 <h3 class="text-secondary">Miss_Nawire</h3>
