--- a/aboutme.html
+++ b/aboutme.html
@@ -20,6 +20,9 @@
         </div>
 
         <nav class="menu">
+            <div class="v4">
+                <img src="images/vic4.jpg" alt="victoria">
+            </div>
             
         
             <ul class="menu-nav">
