--- a/aboutme.html
+++ b/aboutme.html
@@ -19,26 +19,26 @@
             <div class="btn-line"></div>
         </div>
 
-        <nav class="menu">
+        <nav class="menu show">
             
         
-            <ul class="menu-nav">
-                <li class="nav-item">
+            <ul class="menu-nav show">
+                <li class="nav-item show">
                     <a href="index.html" class="nav-link">
             Home
           </a>
                 </li>
-                <li class="nav-item current">
+                <li class="nav-item current show">
                     <a href="aboutme.html" class="nav-link">
             About Me
           </a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item show">
                     <a href="work.html" class="nav-link">
             My Work
           </a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item show">
                     <a href="contactme.html" class="nav-link">
             How To Reach Me
           </a>
