--- a/aboutme.html
+++ b/aboutme.html
@@ -20,6 +20,7 @@
         </div>
 
         <nav class="menu show">
+            <div class="menu-branding show"></div>
             
         
             <ul class="menu-nav show">
