--- a/aboutme.html
+++ b/aboutme.html
@@ -63,7 +63,7 @@
 
             <div class="bio">
                 <h3 class="text-secondary">Miss_Nawire</h3>
-                <p>A web developer with excellent communication skills, works well under pressure and is ready to learn.</p>
+                <p>A web developer with excellent communication skills, works well under pressure and is ready to learn.I joined Moringa School so that I could gain some coding skills as a supplement to my degree. In my free time I love to read novels and to swim when the weather is favorable.</p>
             </div>
 
             <div class="job job-1">
