--- a/contactme.html
+++ b/contactme.html
@@ -25,9 +25,7 @@
 
         <nav class="menu">
             <div class="menu-branding">
-                <div class="portrait">
-                    <img src="images/vic4.jpg" alt="vic"></div>
-            </div>
+                
             <ul class="menu-nav">
                 <li class="nav-item">
                     <a href="index.html" class="nav-link">
@@ -64,7 +62,7 @@
                 <span class="text-secondary">Email: </span> <a href="mailto:victorianawirev@gmail.com">victorianawirev@gmail.com</a>
             </div>
             <div>
-                <span class="text-secondary">Phone: </span> +(254) 799-251-664
+                <span class="text-secondary">Phone: </span> +254799251664
             </div>
             <div>
                 <span class="text-secondary">Address: </span> 71452-00100, Nairobi
