--- a/work.html
+++ b/work.html
@@ -70,12 +70,12 @@
                     <a href="#!">
                         <img src="/images/bg1.jpg" alt="Project">
                     </a>
-                    <a href="https://github.com/victorianawire/My-first-website" class="btn-light">
+                    <a href="https://github.com/victorianawire/delanistudio" class="btn-light">
                         <i class="fas fa-eye"></i> Project
                     </a>
-                    <a href="https://github.com/victorianawire/My-first-website" class="btn-dark">
+                    <a href="https://github.com/victorianawire/delanistudio" class="btn-dark">
                         <i class="fab fa-github"></i> Github
-                        <p>This is my first ever website. It contains basic html and css.</p>
+                        <p>This is a simple website for a studio.</p>
                     </a>
                 </div>
                 &nbsp; &nbsp;
